# pdf-rag-chat

./: .env.example  .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
static/: styles.css
templates/: chat.html  index.html  upload.html
