[project]
name = "ragtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langchain-openai>=0.3.33",
    "python-dotenv>=1.1.1",
    "unstructured[all-docs]>=0.18.14",
    "uvicorn>=0.35.0",
]
